@@ -1,6 +1,7 @@
 ver 0.18.10 (not yet released)
 * decoder
   - ffmpeg: fix seeking bug
+  - ffmpeg: handle unknown stream start time
   - gme: fix memory leak
 
 ver 0.18.9 (2014/03/02)
